Fix viewport height on iOS (#164)

--- a/LesionTracker/client/components/viewerSection/viewerSection.styl
+++ b/LesionTracker/client/components/viewerSection/viewerSection.styl
@@ -5,7 +5,7 @@
   flex: 1
   flex-flow: row nowrap
   align-items: stretch
-  height: 'calc(100vh - %s)' % ($toolbarHeight + $topBarHeight)
+  height: 'calc(100% - %s)' % ($toolbarHeight + $topBarHeight)
   width: 100%
 
   .sidebarMenu
