--- a/OHIFViewer/client/components/flexboxLayout/flexboxLayout.styl
+++ b/OHIFViewer/client/components/flexboxLayout/flexboxLayout.styl
@@ -7,7 +7,7 @@ $lesionsSidebarMenuWidth = 450px
   flex: 1
   flex-flow: row nowrap
   align-items: stretch
-  height: 'calc(100vh - %s)' % ($toolbarHeight + $topBarHeight)
+  height: 'calc(100% - %s)' % ($toolbarHeight + $topBarHeight)
   width: 100%
 
   .sidebarMenu
