--- a/Packages/ohif-viewerbase/client/components/viewer/seriesQuickSwitch/seriesQuickSwitch.styl
+++ b/Packages/ohif-viewerbase/client/components/viewer/seriesQuickSwitch/seriesQuickSwitch.styl
@@ -78,7 +78,7 @@
   .study-browser
     left: 0
     margin-top: 100px
-    max-height: calc(100vh - 100px)
+    max-height: calc(100% - 100px)
     transform-origin(1em calc(1em + 17px))
     width: 300px
 
@@ -86,7 +86,7 @@
       padding: 0 10px
 
   .series-browser
-    max-height: 100vh
+    max-height: 100%
     max-width: 720px
     right: 0
     transform-origin(calc(100% - 1em) calc(1em + 15px))
