--- a/Packages/ohif-viewerbase/client/components/viewer/viewerMain/viewerMain.styl
+++ b/Packages/ohif-viewerbase/client/components/viewer/viewerMain/viewerMain.styl
@@ -7,7 +7,7 @@
     theme('color', '$textSecondaryColor')
     font-size: 30px
     height: 100%
-    line-height: "calc(100vh - %s)" % $topBarHeight
+    line-height: "calc(100% - %s)" % $topBarHeight
 
 .viewerMain
   width: 100%
